--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "mmir-plugin-tts-nuance-web",
-  "version": "0.2.0",
-  "description": "\r\n      Cordova plugin for the MMIR framework that adds Text To Speech (TTS) synthesis via Nuance web services\r\n    ",
-  "cordova": {
-    "id": "mmir-plugin-tts-nuance-web",
-    "platforms": []
+  "name": "mmir-plugin-tts-nuance-xhr",
+  "version": "1.0.0",
+  "description": "Cordova plugin for the MMIR framework that adds Text To Speech (TTS) synthesis via Nuance web services",
+  "main": "./www/webttsNuanceImpl.js",
+  "directories": {
+    "lib": "./www"
+  },
+  "types": "index.d.ts",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "pluginexport"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mmig/mmir-plugins-media.git#master:mmir-plugin-tts-nuance-web"
+    "url": "https://gitlab-cos.b.dfki.de/mmir/mmir-plugin-tts-nuance-xhr.git"
   },
   "keywords": [
-    "cordova",
-    "speech",
     "tts",
-    "synthesis",
-    "ecosystem:cordova"
+    "speech",
+    "recognition",
+    "nuance",
+    "xhr"
   ],
-  "engines": [
-    {
-      "name": "cordova",
-      "version": ">=5.0"
-    }
-  ],
-  "dependencies": {
-	  "mmir-install-cordova-assets": "../mmir-install-cordova-assets"
-  },
-  "scripts": {
-	  "postinstall": "mmir-install-cordova-assets",
-	  "preuninstall": "mmir-uninstall-cordova-assets"
-  },
-  "author": "russa, DFKI",
+  "author": "russa",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/mmig/mmir-plugins-media/issues"
+  "peerDependencies": {
+    "mmir-lib": "git+https://gitlab-cos.b.dfki.de/mmir/dev_mmir-lib.git#develop/webpack"
   },
-  "homepage": "https://github.com/mmig/mmir-plugins-media/tree/master%3Ammir-plugin-tts-nuance-web#readme"
+  "cordova": {
+    "id": "mmir-plugin-tts-nuance-xhr",
+    "platforms": []
+  },
+  "engines": {
+    "cordovaDependencies": {}
+  },
+  "devDependencies": {
+    "mmir-plugin-exports": "git+https://gitlab-cos.b.dfki.de/mmir/mmir-plugin-exports.git"
+  }
 }
